--- a/words.yaml
+++ b/words.yaml
@@ -1,5 +1,9 @@
 - word: doo_boo_dah
   meaning: Book
+- word: doo_dah
+  meaning: Dora (the explorer)
+- word: bah-lio
+  meaning: bath
 - word: pakah
   meaning: Cucumber
 - word: loolooh
